# loop-engineering

./: .gitignore  .loop-publish-meta.json  .loop-team-config.example  LICENSE  LOOP_TEAM_STANDARD.md  MODEL_ROUTING_BACKLOG.md  PORTABILITY.md  QUICKSTART.md  README.md  SESSION_NOTES.md  VERIFY_POLICY.md  conftest.py  deep-research-bounded.js  pytest.ini
.gate/: subprocess_tested.globs
artifacts/: cockpit-feature-plan-competitive-parity-verified.html  cockpit-feature-plan-competitive-parity.html  lovable-vs-local-manifest-diff.json  reverification-ledger-2026-07-13.md  taxahead-canonical-baseline.json  taxahead-dashboard.json  taxahead-local-before-lovable.json  taxahead-reconciliation-register.json
codex-reviewer/: CLAUDE-TELLS-CODEX.md  README.md  codex-review.sh
control-plane/: README.md
hooks/: README.md  _codex_fixture_builders.py  adversarial_review_scan.py  closure_touch_scan.py  codex_hook_stdin_capture.py  codex_transcript_adapter.py  commit_scope_scan.py  dispatch_check_presence.py  loop_guard.py  (+32 more)
loop-team/runner/: USAGE.md  __init__.py  __main__.py  claude_agent_adapter.py  claude_subscription_pilot.py  codex_exec_adapter.py  codex_subscription_pilot.py  config.py  dispatch.py  experiment_execution.py  pyproject.toml  roles.py  run_trace.py
loop-team/runner/tests/: conftest.py  test_claude_agent_adapter.py  test_claude_subscription_pilot.py  test_codex_exec_adapter.py  test_codex_subscription_adapter.py  test_codex_subscription_pilot.py  test_experiment_execution_contract.py  test_log_wiring.py  test_run_trace.py  test_runner.py  test_version.py
(+520 files in other folders)
