[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-team-runner"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.25"]
openai = ["openai>=1.0"]
all = ["anthropic>=0.25", "openai>=1.0"]

# Package discovery: pyproject.toml lives inside runner/, so where = [".."] points
# to the parent directory (public/) where the runner package folder itself resides.
# Install must be run from the runner/ directory: cd runner/ && pip install -e .
[tool.setuptools.packages.find]
where = [".."]
include = ["runner*"]
